--- a/index.html
+++ b/index.html
@@ -10,7 +10,15 @@
     <title>Ping-pong</title>
   </head>
   <body>
+    <div class="container">
+          <h1>Ping Pong</h1>
+          <p>Let's play the Ping-Pong game.</p>
 
+          <form id="start-form">
+            <label for="input-number">Your number:</label>
+            <input id="input-number" type="number">
+
+          
 
 
   </body>
