change form name

--- a/index.html
+++ b/index.html
@@ -11,14 +11,20 @@
   </head>
   <body>
     <div class="container">
-          <h1>Ping Pong</h1>
-          <p>Let's play the Ping-Pong game.</p>
+        <h1>Ping Pong</h1>
+        <p>Let's play the Ping-Pong game.</p>
 
-          <form id="start-form">
-            <label for="input-number">Your number:</label>
-            <input id="input-number" type="number">
+        <form id="form-group">
+          <label for="input-number">Enter number:</label>
+          <input id="input-number" type="number">
 
-          
+          <button type="submit" class="btn">Calculate</button>
+        </form>
+
+        <div id="end-number">
+          <ul id="results"></ul>
+        </div>
+    </div>
 
 
   </body>
