add business interface logic

--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
         <p>Let's play the Ping-Pong game.</p>
 
         <form id="form-group">
-          <label for="input-number">Enter number:</label>
-          <input id="input-number" type="number">
+          <label for="number">Enter number:</label>
+          <input id="number" type="number">
 
           <button type="submit" class="btn">Calculate</button>
         </form>
