--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <title>Ping-pong</title>
   </head>
   <body>
+    <img src="img/pong.jpeg" align="middle">
     <div class="container">
       <h1>Ping Pong</h1>
       <p>Let's play the Ping-Pong game.</p>
